# Primes

PrimeCSharp/solution_4/: KnownPrimes.cs  PrimeSieve.cs  Program.cs  Solution4.csproj  Solution4.sln
PrimeHaskell/solution_2/: Dockerfile  Primes.hs  PrimesNoLSR.hs  PrimesTH.hs  README.md  build-asm.sh  build-cpu-12-avx.sh  build-cpu-12-print.sh  build-cpu-12-stack.sh  build-cpu-12.sh  build-cpu-nolsr.sh  build-cpu-print.sh  build-cpu-vector-print.sh  build-cpu-vector.sh  build-cpu-vector2-print.sh  build-cpu-vector2.sh  build-cpu.sh  build-default.sh  grep-asm.sh
PrimeRust/solution_1/: .gitignore  Cargo.toml  Dockerfile  perf-collect  perf-report
PrimeRust/solution_1/.cargo/: config
PrimeRust/solution_1/helper-macros/src/: lib.rs
PrimeRust/solution_1/prime-sieve-rust/src/: main.rs  unrolled.rs  unrolled_extreme.rs
PrimeRust/solution_1/src/: flag_storage.rs  main.rs  patterns.rs  sieve.rs  storage.rs  unrolled.rs  unrolled32.rs  unrolled64.rs  unrolled8.rs
PrimeRust/stl-faithful/mike-barber/src/: abstracted.rs
PrimeSieveRust/: Cargo.toml
PrimeSieveRust/src/: abstracted.rs
