[package]
name = "prime-sieve-rust"
version = "0.1.0"
authors = ["Michael Barber <60610888+mike-barber@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus="1.13"
tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "simple-bits"
path = "src/simple-bits.rs"

[[bin]]
name = "abstracted"
path = "src/abstracted.rs"
